--- a/index.html
+++ b/index.html
@@ -5,8 +5,146 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header class="main-header">
+      <div class="container">
+        <div class="index-logo">
+          <img src="img/nerds-logo.png" width="160" height="65" alt="NЁRDS DESIGN STUDIO">
+        </div>
+        <nav class="main-navigation">
+          <ul>
+            <li>
+              <a href="#">Студия</a>
+            </li>
+            <li>
+              <a href="#">Клиенты</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="user-block">
+          <a class="cart" href="#">Корзина</a>
+        </div>
+        <div class="slider" style="height: 545px;">
+          <ul>
+            <li class="slider-1">
+              <h1 class="slider-name">Долго, дорого, скрупулезно.</h1>
+              <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+              <a class=button href="#">Узнать больше</a>
+              <img src="img/nerds-index-slide1.png" width="698" height="413" alt="Mobile">
+            </li>
+            <li class="slider-2">
+              <h1 class="slider-name">Любим математику как никто другой</h1>
+              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+              <a class=button href="#">Узнать больше</a>
+              <img src="img/nerds-index-slide2.png" width="663" height="430" alt="Desktop">
+            </li>
+            <li class="slider-3">
+              <h1 class="slider-name">Только ночь, только хардкор</h1>
+              <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+              <a class=button href="#">Узнать больше</a>
+              <img src="img/nerds-index-slide2.png" width="759" height="411" alt="Tablet">
+            </li>
+          </ul>
+          <div class="control">
+            <input type="radio" id="point-1" name="point" checked>
+            <label for="point-1"></label>
+            <input type="radio" id="point-2" name="point">
+            <label for="point-2"></label>
+            <input type="radio" id="point-3" name="point">
+            <label for="point-3"></label>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="container">
+      <section class="features">
+        <div class="features-item">
+          <img src="img/illustration-1.png" width="300" height="146" alt="Website">
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a class=button href="#">Заказать</a>
+        </div>
+        <div class="features-item">
+          <img src="img/illustration-2.png" width="300" height="146" alt="Website">
+          <h3>Приложения</h3>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a class=button href="#">Заказать</a>
+        </div>
+        <div class="features-item">
+          <img src="img/illustration-3.png" width="300" height="146" alt="Website">
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <a class=button href="#">Заказать</a>
+        </div>
+      </section>
+      <div class="index-content">
+        <div class="index-content-left">
+          <h2 class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <h4>Выполняем заказы на разработку:</h4>
+          <ul>
+            <li>
+              <p>Веб-сайтов любой сложности</p>
+            </li>
+            <li>
+              <p>Мобильных приложений для iOS и Android</p>
+            </li>
+            <li>
+              <p>Слайдшоу и видео для корпоративных презентаций</p>
+            </li>
+          </ul>
+        </div>
+        <div class="index-content-right">
+          <img src="img/nerds-illustration.png" width="360" height="208" alt="Logo">
+          <h4>с 2004 года Любим точность во всем:</h4>
+          <ul>
+            <li>
+              <b>146%</b>
+							<p>Уровень самоотдачи</p>
+            </li>
+            <li>
+              <b>100%</b>
+							<p>Соблюдение сроков</p>
+            </li>
+            <li>
+              <b>50%</b>
+							<p>Минимальная предоплата</p>
+            </li>
+          </ul>
+        </div>
+        <div class="partners">
+          <img src="img/logo-1.png" width="199" height="68" alt="Html-academy">
+          <img src="img/logo-2.png" width="209" height="90" alt="Borodinski">
+          <img src="img/logo-3.png" width="185" height="52" alt="Pink">
+          <img src="img/logo-4.png" width="173" height="84" alt="Mishka">
+        </div>
+      </div>
+    <main>
+    <footer class="main-footer">
+      <div class="map">
+        <img src="img/logo-1.png" width="1440" height="563" alt="Map">
+        <div class="adress">
+          <h4>NЁRDS DESIGN STUDIO</h4>
+          <p>191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8<br>
+            тел. +7 (812) 275-75-75</p>
+          <a class=button href="#">Напишите нам</a>
+        </div>
+      </div>
+      <div class="container">
+        <section class="footer-social">
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+          <b>Давайте дружить, это выгодно!</b>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
