--- a/index.html
+++ b/index.html
@@ -29,63 +29,63 @@
         <div class="user-block">
           <a class="cart" href="#">Корзина</a>
         </div>
-        <div class="slider" style="height: 545px;">
-          <ul>
-            <li class="slider-1">
-              <h1 class="slider-name">Долго, дорого, скрупулезно.</h1>
-              <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-              <a class=button href="#">Узнать больше</a>
-              <img src="img/nerds-index-slide1.png" width="698" height="413" alt="Mobile">
-            </li>
-            <li class="slider-2">
-              <h1 class="slider-name">Любим математику как никто другой</h1>
-              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-              <a class=button href="#">Узнать больше</a>
-              <img src="img/nerds-index-slide2.png" width="663" height="430" alt="Desktop">
-            </li>
-            <li class="slider-3">
-              <h1 class="slider-name">Только ночь, только хардкор</h1>
-              <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-              <a class=button href="#">Узнать больше</a>
-              <img src="img/nerds-index-slide2.png" width="759" height="411" alt="Tablet">
-            </li>
-          </ul>
-          <div class="control">
-            <input type="radio" id="point-1" name="point" checked>
-            <label for="point-1"></label>
-            <input type="radio" id="point-2" name="point">
-            <label for="point-2"></label>
-            <input type="radio" id="point-3" name="point">
-            <label for="point-3"></label>
-          </div>
+      </div>
+      <div class="container slider" style="height: 545px;">
+        <ul>
+          <li class="slider-1">
+            <h1 class="slider-name">Долго, дорого, скрупулезно.</h1>
+            <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+            <a class=button href="#">Узнать больше</a>
+            <img src="img/nerds-index-slide1.png" width="698" height="413" alt="Mobile">
+          </li>
+          <li class="slider-2">
+            <h1 class="slider-name">Любим математику как никто другой</h1>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <a class=button href="#">Узнать больше</a>
+            <img src="img/nerds-index-slide2.png" width="663" height="430" alt="Desktop">
+          </li>
+          <li class="slider-3">
+            <h1 class="slider-name">Только ночь, только хардкор</h1>
+            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a class=button href="#">Узнать больше</a>
+            <img src="img/nerds-index-slide2.png" width="759" height="411" alt="Tablet">
+          </li>
+        </ul>
+        <div class="control">
+          <input type="radio" id="point-1" name="point" checked>
+          <label for="point-1"></label>
+          <input type="radio" id="point-2" name="point">
+          <label for="point-2"></label>
+          <input type="radio" id="point-3" name="point">
+          <label for="point-3"></label>
         </div>
       </div>
     </header>
     <main class="container">
       <section class="features">
-        <div class="features-item">
+        <section class="features-item">
           <img src="img/illustration-1.png" width="300" height="146" alt="Website">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class=button href="#">Заказать</a>
-        </div>
-        <div class="features-item">
+        </section>
+        <section class="features-item">
           <img src="img/illustration-2.png" width="300" height="146" alt="Website">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class=button href="#">Заказать</a>
-        </div>
-        <div class="features-item">
+        </section>
+        <section class="features-item">
           <img src="img/illustration-3.png" width="300" height="146" alt="Website">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a class=button href="#">Заказать</a>
-        </div>
+        </section>
       </section>
       <div class="index-content">
         <div class="index-content-left">
-          <h2 class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <p><b class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+          <span>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</span>
           <h4>Выполняем заказы на разработку:</h4>
           <ul>
             <li>
@@ -118,10 +118,10 @@
           </ul>
         </div>
         <div class="partners">
-          <img src="img/logo-1.png" width="199" height="68" alt="Html-academy">
-          <img src="img/logo-2.png" width="209" height="90" alt="Borodinski">
-          <img src="img/logo-3.png" width="185" height="52" alt="Pink">
-          <img src="img/logo-4.png" width="173" height="84" alt="Mishka">
+          <div class="partner-1"><img src="img/logo-1.png" width="199" height="68" alt="Html-academy"></div>
+          <div class="partner-2"><img src="img/logo-2.png" width="209" height="90" alt="Borodinski"></div>
+          <div class="partner-3"><img src="img/logo-3.png" width="185" height="52" alt="Pink"></div>
+          <div class="partner-4"><img src="img/logo-4.png" width="173" height="84" alt="Mishka"></div>
         </div>
       </div>
     <main>
@@ -135,14 +135,19 @@
             тел. +7 (812) 275-75-75</p>
           <a class=button href="#">Напишите нам</a>
         </div>
+        <div class="map-marker">
+          <img src="img/map-marker.png" width="237" height="190" alt="Map-marker">
+        </div>
       </div>
       <div class="container">
         <section class="footer-social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </section>
+        <section class="footer-friendship">
           <b>Давайте дружить, это выгодно!</b>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
+          <span>Скидка 10% для друзей из социальных сетей.</span>
         </section>
       </div>
     </footer>
