Разметка личного проекта #3
Сделала слайдер списком-ссылками, поправила опечатки. Добавила
изображения и шрифты.

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин готовых шаблонов</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -141,7 +142,7 @@
             </div>
             <img src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
             <div class="templates-hover">
-              <h2>Sedona</h2>
+              <h3>Sedona</h3>
               <span>Информационный сайт для туристов</span>
 							<a class="button" href="#">9 900 руб.</a>
             </div>
@@ -162,7 +163,7 @@
             </div>
             <img src="img/img-pink.jpg" width="360" height="576" alt="Pink App">
             <div class="templates-hover">
-              <h2>Pink App</h2>
+              <h3>Pink App</h3>
               <span>Продуктовый лендинг приложения для iOS и Android</span>
 							<a class="button" href="#">9 900 руб.</a>
             </div>
@@ -183,7 +184,7 @@
             </div>
             <img src="img/img-barbershop.jpg" width="360" height="576" alt="Barbershop">
             <div class="templates-hover">
-              <h2>Barbershop</h2>
+              <h3>Barbershop</h3>
               <span>Сайт салона красоты. Для мужчин, да.</span>
 							<a class="button" href="#">9 900 руб.</a>
             </div>
@@ -204,7 +205,7 @@
             </div>
             <img src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
             <div class="templates-hover">
-              <h2>Mishka</h2>
+              <h3>Mishka</h3>
               <span>Интернет-магазин вязаных игрушек</span>
 							<a class="button" href="#">9 900 руб.</a>
             </div>
@@ -225,7 +226,7 @@
             </div>
             <img src="img/img-aplus.jpg" width="360" height="576" alt="A plus">
             <div class="templates-hover">
-              <h2>A plus</h2>
+              <h3>A plus</h3>
               <span>Лендинг курсов повышения квалификации</span>
 							<a class="button" href="#">9 900 руб.</a>
             </div>
@@ -246,7 +247,7 @@
             </div>
             <img src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
             <div class="templates-hover">
-              <h2>Кваст</h2>
+              <h3>Кваст</h3>
               <span>Промо-сайт производителя крафтового кваса</span>
 							<a class="button" href="#">9 900 руб.</a>
             </div>
@@ -272,16 +273,16 @@
     </main>
     <footer class="main-footer">
       <div class="map">
-        <img src="img/logo-1.png" width="1440" height="563" alt="Map">
+        <img src="img/map.jpg" width="1440" height="416" alt="Map">
         <div class="adress">
           <h3>NЁRDS DESIGN STUDIO</h3>
           <p>191186, Санкт-Петербург,<br>
             ул. Б. Конюшенная, д. 19/8<br>
             тел. +7 (812) 275-75-75</p>
-          <a class=button href="#">Напишите нам</a>
+          <a class="button" href="#">Напишите нам</a>
         </div>
         <div class="map-marker">
-          <img src="img/map-marker.png" width="237" height="190" alt="Map-marker">
+          <img src="img/map-marker.png" width="231" height="190" alt="Map-marker">
         </div>
       </div>
       <div class="container">
