--- a/catalog.html
+++ b/catalog.html
@@ -78,23 +78,23 @@
             <legend>Особенности:</legend>
             <ul class="features">
               <li>
-                <input type="checkbox" id="feature-1" name="check1" checked>
+                <input type="checkbox" id="feature-1" name="check" checked>
                 <label for="feature-1">Слайдер</label>
               </li>
               <li>
-                <input type="checkbox" id="feature-2" name="check2">
+                <input type="checkbox" id="feature-2" name="check">
                 <label for="feature-2">Блок преимуществ</label>
               </li>
               <li>
-                <input type="checkbox" id="feature-3" name="check3" checked>
+                <input type="checkbox" id="feature-3" name="check" checked>
                 <label for="feature-3">Новости</label>
               </li>
               <li>
-                <input type="checkbox" id="feature-4" name="check4">
+                <input type="checkbox" id="feature-4" name="check">
                 <label for="feature-4">Галерея</label>
               </li>
               <li>
-                <input type="checkbox" id="feature-5" name="check5">
+                <input type="checkbox" id="feature-5" name="check">
                 <label for="feature-5">Корзина</label>
               </li>
             </ul>
@@ -103,8 +103,7 @@
         </form>
       </div>
       <div class="catalog-content-right">
-        <div class="sorting">
-          <ul class="sorting">
+        <ul class="sorting">
             <li>
               Сортировать:
             </li>
@@ -124,7 +123,6 @@
               <a class="sorting-up" href="#">По возрастанию</a>
             </li>
           </ul>
-        </div>
         <section class="templates">
           <article class="sedona">
             <div class="browser-bar">
@@ -259,13 +257,13 @@
               <a class="active" href="#">1</a>
             </li>
             <li>
-              <a class="no-active" href="#">2</a>
+              <a href="#">2</a>
             </li>
             <li>
-              <a class="no-active" href="#">3</a>
+              <a href="#">3</a>
             </li>
             <li>
-              <a class="no-active" href="#">Следующая</a>
+              <a href="#">Следующая</a>
             </li>
           </ul>
         </div>
