--- a/index.html
+++ b/index.html
@@ -31,25 +31,31 @@
           <a class="cart" href="#">Корзина</a>
         </div>
       </div>
-      <div class="container slider" style="height: 545px;">
+      <div class="container slider">
         <ul>
           <li class="slider-1" id="slide-1">
             <h1 class="slider-name">Долго, дорого, скрупулезно.</h1>
             <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
             <a class="button" href="#">Узнать больше</a>
-            <img src="img/nerds-index-slide1.png" width="698" height="413" alt="Mobile">
+            <div class=slider-img>
+              <img src="img/nerds-index-slide1.png" width="698" height="413" alt="Mobile">
+            </div>
           </li>
           <li class="slider-2" id="slide-2">
             <h1 class="slider-name">Любим математику как никто другой</h1>
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
             <a class="button" href="#">Узнать больше</a>
-            <img src="img/nerds-index-slide2.png" width="663" height="430" alt="Desktop">
+            <div class=slider-img>
+              <img src="img/nerds-index-slide2.png" width="663" height="430" alt="Desktop">
+            </div>
           </li>
           <li class="slider-3" id="slide-3">
             <h1 class="slider-name">Только ночь, только хардкор</h1>
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a class="button" href="#">Узнать больше</a>
-            <img src="img/nerds-index-slide3.png" width="759" height="411" alt="Tablet">
+            <div class=slider-img>
+              <img src="img/nerds-index-slide3.png" width="759" height="411" alt="Tablet">
+            </div>
           </li>
         </ul>
         <div class="control">
@@ -69,28 +75,28 @@
     </header>
     <main class="container">
       <section class="features">
-        <section class="features-item">
+        <article class="features-item">
           <img src="img/illustration-1.jpg" width="300" height="146" alt="Website">
           <h2>Веб-сайты</h2>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class="button" href="#">Заказать</a>
-        </section>
-        <section class="features-item">
+        </article>
+        <article class="features-item">
           <img src="img/illustration-2.jpg" width="300" height="146" alt="Application">
           <h2>Приложения</h2>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="button" href="#">Заказать</a>
-        </section>
-        <section class="features-item">
+        </article>
+        <article class="features-item">
           <img src="img/illustration-3.jpg" width="300" height="146" alt="Presentation">
           <h2>Презентации</h2>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a class="button" href="#">Заказать</a>
-        </section>
+        </article>
       </section>
       <div class="index-content">
         <div class="index-content-left">
-          <p><b class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+          <p class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
           <span>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</span>
           <h4>Выполняем заказы на разработку:</h4>
           <ul>
