--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <div class="index-logo">
           <img src="img/nerds-logo.png" width="160" height="65" alt="NЁRDS DESIGN STUDIO">
         </div>
@@ -269,21 +269,24 @@
         </div>
       </div>
     </main>
-    <footer class="main-footer">
-      <div class="map">
-        <img src="img/map.jpg" width="1440" height="416" alt="Map">
-        <div class="adress">
-          <h3>NЁRDS DESIGN STUDIO</h3>
-          <p>191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8<br>
-            тел. +7 (812) 275-75-75</p>
-          <a class="button" href="#">Напишите нам</a>
-        </div>
-        <div class="map-marker">
-          <img src="img/map-marker.png" width="231" height="190" alt="Map-marker">
-        </div>
+    <footer class="main-footer clearfix">
+      <div class="map clearfix">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1969.312323487249!2d30.320988978160425!3d59.93902966532363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1486316012099" width="100%" height="416" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!--<img src="img/map.jpg" width="1440" height="416" alt="Map">-->
+        <div class="map-markers container">
+          <div class="adress">
+            <h3>NЁRDS DESIGN STUDIO</h3>
+            <p>191186, Санкт-Петербург,<br>
+              ул. Б. Конюшенная, д. 19/8<br>
+              тел. +7 (812) 275-75-75</p>
+            <a class="button" href="#">Напишите нам</a>
+          </div>
+          <div class="marker">
+            <img src="img/map-marker.png" width="231" height="190" alt="Map-marker">
+          </div>
       </div>
-      <div class="container">
+      </div>
+      <div class="social container clearfix">
         <section class="footer-social">
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
