--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <img src="img/nerds-index-slide1.png" width="698" height="413" alt="Mobile">
             </div>
           </li>
-          <!--<li class="slider-2" id="slide-2">
+          <li class="slider-2" id="slide-2">
             <div class="slider-content">
               <h1 class="slider-name">Любим математику как никто другой</h1>
               <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
@@ -77,7 +77,7 @@
             </li>
           </ul>
         </div>
-      </div>-->
+      </div>
     </header>
     <main class="container">
       <section class="features clearfix">
