--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Магазин готовых шаблонов</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -275,7 +277,7 @@
       <div class="map clearfix">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1969.312323487249!2d30.320988978160425!3d59.93902966532363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1486316012099" width="100%" height="416" frameborder="0" style="border:0" allowfullscreen></iframe>
         <!--<img src="img/map.jpg" width="1440" height="416" alt="Map">-->
-        <div class="map-markers container">
+        <div class="map-markers">
           <div class="adress">
             <h3>NЁRDS DESIGN STUDIO</h3>
             <p>191186, Санкт-Петербург,<br>
