--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -32,38 +34,36 @@
         </div>
       </div>
       <div class="container slider clearfix">
-        <ul>
-          <li class="slider-1" id="slide-1">
-            <div class="slider-content">
-              <h1 class="slider-name">Долго, дорого, скрупулезно.</h1>
-              <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-              <a class="button" href="#">Узнать больше</a>
-            </div>
-            <div class=slider-img>
-              <img src="img/nerds-index-slide1.png" width="698" height="413" alt="Mobile">
-            </div>
-          </li>
-          <li class="slider-2" id="slide-2">
-            <div class="slider-content">
-              <h1 class="slider-name">Любим математику как никто другой</h1>
-              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-              <a class="button" href="#">Узнать больше</a>
-            </div>
-            <div class=slider-img>
-              <img src="img/nerds-index-slide2.png" width="663" height="430" alt="Desktop">
-            </div>
-          </li>
-          <li class="slider-3" id="slide-3">
-            <div class="slider-content">
-              <h1 class="slider-name">Только ночь, только хардкор</h1>
-              <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-              <a class="button" href="#">Узнать больше</a>
-            </div>
-            <div class=slider-img>
-              <img src="img/nerds-index-slide3.png" width="759" height="411" alt="Tablet">
-            </div>
-          </li>
-        </ul>
+        <div class="slider-1 clearfix" id="slide-1">
+          <div class="slider-content">
+            <h1 class="slider-name">Долго, дорого, скрупулезно.</h1>
+            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+            <a class="button" href="#">Узнать больше</a>
+          </div>
+          <!--<div class=slider-img>
+            <img src="img/nerds-index-slide1.png" width="698" height="413" alt="Mobile">
+          </div>-->
+        </div>
+        <div class="slider-2 clearfix" id="slide-2">
+          <div class="slider-content">
+            <h1 class="slider-name">Любим математику как никто другой</h1>
+            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+            <a class="button" href="#">Узнать больше</a>
+          </div>
+          <!--<div class=slider-img>
+            <img src="img/nerds-index-slide2.png" width="663" height="430" alt="Desktop">
+          </div>-->
+        </div>
+        <div class="slider-3 clearfix" id="slide-3">
+          <div class="slider-content">
+            <h1 class="slider-name">Только ночь, только хардкор</h1>
+            <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+            <a class="button" href="#">Узнать больше</a>
+          </div>
+          <!--<div class=slider-img>
+            <img src="img/nerds-index-slide3.png" width="759" height="411" alt="Tablet">
+          </div>-->
+        </div>
         <div class="control">
           <ul>
             <li>
@@ -84,20 +84,20 @@
         <article class="features-item">
           <img src="img/illustration-1.jpg" width="300" height="146" alt="Website">
           <h2>Веб-сайты</h2>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
           <a class="button" href="#">Заказать</a>
         </article>
         <article class="features-item">
           <img src="img/illustration-2.jpg" width="300" height="146" alt="Application">
           <h2>Приложения</h2>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a class="button" href="#">Заказать</a>
+          <a class="button-green" href="#">Заказать</a>
         </article>
         <article class="features-item">
           <img src="img/illustration-3.jpg" width="300" height="146" alt="Presentation">
           <h2>Презентации</h2>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="button" href="#">Заказать</a>
+          <p>Вы даже не подозреваете,<br> насколько вы изумительны!</p>
+          <a class="button-yellow" href="#">Заказать</a>
         </article>
       </section>
       <div class="index-content clearfix">
@@ -138,10 +138,28 @@
           </div>
         </div>
         <div class="partners clearfix">
-          <div class="partner-1"><img src="img/logo-1.png" width="199" height="68" alt="Html-academy"></div>
-          <div class="partner-2"><img src="img/logo-2.png" width="209" height="90" alt="Borodinski"></div>
-          <div class="partner-3"><img src="img/logo-3.png" width="185" height="52" alt="Pink"></div>
-          <div class="partner-4"><img src="img/logo-4.png" width="173" height="84" alt="Mishka"></div>
+          <ul>
+            <li>
+              <a title="Html-academy" href="#">
+                <img src="img/logo-1.png" width="199" height="68" alt="Html-academy">
+              </a>
+            </li>
+            <li>
+              <a title="Borodinski" href="#">
+                <img src="img/logo-2.png" width="209" height="90" alt="Borodinski">
+              </a>
+            </li>
+            <li>
+              <a title="Pink" href="#">
+                <img src="img/logo-3.png" width="185" height="52" alt="Pink">
+              </a>
+            </li>
+            <li>
+              <a title="Mishka" href="#">
+                <img src="img/logo-4.png" width="173" height="84" alt="Mishka">
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </main>
@@ -149,7 +167,7 @@
       <div class="map clearfix">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1969.312323487249!2d30.320988978160425!3d59.93902966532363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1486316012099" width="100%" height="416" frameborder="0" style="border:0" allowfullscreen></iframe>
         <!--<img src="img/map.jpg" width="1440" height="416" alt="Map">-->
-        <div class="map-markers container">
+        <div class="map-markers">
           <div class="adress">
             <h3>NЁRDS DESIGN STUDIO</h3>
             <p>191186, Санкт-Петербург,<br>
